testsuite/tests/lexical_envs/invalid_subunit_root/common.lkt
from lexer_example import foo_lexer

class FooNode implements Node[FooNode] {
}
